--- a/package.json
+++ b/package.json
@@ -70,6 +70,7 @@
         "core-js": "^3.4.3",
         "css-baseline": "^1.1.10",
         "css-loader": "^3.3.2",
+        "fuse.js": "^5.2.3",
         "good-date": "^1.3.16",
         "good-vue": "^1.3.1",
         "html-webpack-plugin": "^3.2.0",
