pull out video stuff

--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-    "name": "video_labeler",
+    "name": "vue_electron_quickstart",
     "version": "1.0.0",
     "author": "Jeff Hykin <jeff.hykin@gmail.com>",
     "description": "An electron-vue project",
@@ -15,7 +15,6 @@
         "pack:main": "cross-env NODE_ENV=production webpack --progress --colors --config .electron-vue/webpack.main.config.js",
         "pack:renderer": "cross-env NODE_ENV=production webpack --progress --colors --config .electron-vue/webpack.renderer.config.js",
         "postinstall": "",
-        "package": "npx electron-packager . --no-prune --overwrite ; mv video_labeler-darwin-x64 app.nosync"
     },
     "vueElectronSettings": {
         "devPortNumber": 9080
@@ -24,8 +23,8 @@
     "nodeGypRebuild": true,
     "npmRebuild": false,
     "build": {
-        "productName": "video_labeler",
-        "appId": "jeffhykin.video_labeler",
+        "productName": "vue_electron_quickstart",
+        "appId": "jeffhykin.vue_electron_quickstart",
         "directories": {
             "output": "build"
         },
