--- a/package.json
+++ b/package.json
@@ -10,11 +10,7 @@
         "build:dir": "node .electron-vue/build.js && electron-builder --dir",
         "build:clean": "cross-env BUILD_TARGET=clean node .electron-vue/build.js",
         "build:web": "cross-env BUILD_TARGET=web node .electron-vue/build.js",
-        "dev": "node .electron-vue/dev-runner.js",
-        "pack": "npm run pack:main && npm run pack:renderer",
-        "pack:main": "cross-env NODE_ENV=production webpack --progress --colors --config .electron-vue/webpack.main.config.js",
-        "pack:renderer": "cross-env NODE_ENV=production webpack --progress --colors --config .electron-vue/webpack.renderer.config.js",
-        "postinstall": ""
+        "dev": "node .electron-vue/dev-runner.js"
     },
     "vueElectronSettings": {
         "devPortNumber": 9080
@@ -59,56 +55,56 @@
     "dependencies": {
         "@vue/babel-helper-vue-jsx-merge-props": "^1.0.0",
         "@vue/babel-preset-jsx": "^1.1.2",
-        "axios": "^0.19.0",
-        "babel-loader": "^8.0.6",
+        "axios": "^0.19.2",
+        "babel-loader": "^8.1.0",
         "babel-plugin-transform-runtime": "^6.23.0",
         "babel-preset-minify": "^0.5.1",
-        "cfonts": "^2.4.5",
+        "cfonts": "^2.8.2",
         "chalk": "^3.0.0",
         "copy-webpack-plugin": "^5.1.1",
-        "core-js": "^3.4.3",
+        "core-js": "^3.6.5",
         "css-baseline": "^1.1.10",
-        "css-loader": "^3.3.2",
+        "css-loader": "^3.5.3",
         "good-vue": "^1.3.1",
         "html-webpack-plugin": "^3.2.0",
         "js-yaml": "^3.13.1",
-        "keen-ui": "^1.2.1",
+        "keen-ui": "^1.3.0",
         "lodash.merge": "^4.6.2",
-        "mini-css-extract-plugin": "^0.8.0",
-        "moment": "^2.24.0",
-        "node-sass": "^4.13.1",
-        "npm": "^6.14.3",
+        "mini-css-extract-plugin": "^0.8.2",
+        "moment": "^2.25.3",
+        "node-sass": "^4.14.1",
+        "npm": "^6.14.5",
         "url-loader": "^3.0.0",
         "vue": "^2.6.11",
         "vue-electron": "^1.0.6",
         "vue-graph": "^0.8.7",
-        "vue-json-pretty": "^1.6.2",
-        "vue-loader": "^15.8.3",
-        "vue-router": "^3.1.3",
-        "vue-toasted": "^1.1.27",
-        "webpack": "^4.41.3",
-        "webpack-cli": "^3.3.10",
-        "webpack-dev-server": "^3.9.0",
+        "vue-json-pretty": "^1.6.3",
+        "vue-loader": "^15.9.2",
+        "vue-router": "^3.1.6",
+        "vue-toasted": "^1.1.28",
+        "webpack": "^4.43.0",
+        "webpack-cli": "^3.3.11",
+        "webpack-dev-server": "^3.11.0",
         "webpack-hot-middleware": "^2.25.0",
         "webpack-merge": "^4.2.2",
-        "ytdl-core": "^1.0.3"
+        "ytdl-core": "^1.0.9"
     },
     "devDependencies": {
-        "electron": "^7.1.5",
+        "@vue/cli-plugin-babel": "^4.3.1",
+        "@vue/cli-service": "^4.3.1",
+        "electron": "^7.3.0",
         "electron-builder": "^21.2.0",
         "electron-debug": "^3.0.1",
         "electron-default-menu": "^1.0.1",
         "electron-devtools-installer": "^2.2.4",
         "electron-localshortcut": "^3.2.1",
-        "electron-packager": "^14.1.1",
-        "@vue/cli-plugin-babel": "^4.1.0",
-        "@vue/cli-service": "^4.1.0",
+        "electron-packager": "^14.2.1",
         "es6-promise": "^4.2.8",
         "exports-loader": "^0.7.0",
-        "fibers": "^4.0.2",
+        "fibers": "^4.0.3",
         "imports-loader": "^0.8.0",
-        "sass": "^1.23.7",
-        "sass-loader": "^8.0.0",
+        "sass": "^1.26.5",
+        "sass-loader": "^8.0.2",
         "vue-template-compiler": "^2.6.11"
     },
     "browserslist": [
