--- a/package.json
+++ b/package.json
@@ -14,7 +14,7 @@
         "pack": "npm run pack:main && npm run pack:renderer",
         "pack:main": "cross-env NODE_ENV=production webpack --progress --colors --config .electron-vue/webpack.main.config.js",
         "pack:renderer": "cross-env NODE_ENV=production webpack --progress --colors --config .electron-vue/webpack.renderer.config.js",
-        "postinstall": "",
+        "postinstall": ""
     },
     "vueElectronSettings": {
         "devPortNumber": 9080
@@ -76,6 +76,7 @@
         "lodash.merge": "^4.6.2",
         "mini-css-extract-plugin": "^0.8.0",
         "moment": "^2.24.0",
+        "multispinner": "^0.2.1",
         "node-sass": "^4.13.1",
         "npm": "^6.14.3",
         "url-loader": "^3.0.0",
