--- a/package.json
+++ b/package.json
@@ -55,6 +55,8 @@
     "dependencies": {
         "@vue/babel-helper-vue-jsx-merge-props": "^1.0.0",
         "@vue/babel-preset-jsx": "^1.1.2",
+        "apexcharts": "^3.11.0",
+        "axios": "^0.19.0",
         "babel-loader": "^8.0.6",
         "babel-plugin-transform-runtime": "^6.23.0",
         "babel-preset-minify": "^0.5.1",
@@ -67,6 +69,7 @@
         "good-vue": "^1.3.1",
         "html-webpack-plugin": "^3.2.0",
         "js-yaml": "^3.13.1",
+        "keen-ui": "^1.2.1",
         "lodash.merge": "^4.6.2",
         "mini-css-extract-plugin": "^0.8.0",
         "moment": "^2.24.0",
@@ -79,11 +82,14 @@
         "vue-graph": "^0.8.7",
         "vue-json-pretty": "^1.6.2",
         "vue-loader": "^15.8.3",
+        "vue-router": "^3.1.3",
+        "vue-toasted": "^1.1.27",
         "webpack": "^4.41.3",
         "webpack-cli": "^3.3.10",
         "webpack-dev-server": "^3.9.0",
         "webpack-hot-middleware": "^2.25.0",
-        "webpack-merge": "^4.2.2"
+        "webpack-merge": "^4.2.2",
+        "ytdl-core": "^1.0.3"
     },
     "devDependencies": {
         "electron": "^7.1.5",
