--- a/package.json
+++ b/package.json
@@ -53,6 +53,9 @@
         }
     },
     "dependencies": {
+        "@tensorflow/tfjs-backend-webgl": "^2.0.1",
+        "@tensorflow/tfjs-core": "^2.0.1",
+        "@tensorflow/tfjs-layers": "^2.0.1",
         "@vue/babel-helper-vue-jsx-merge-props": "^1.0.0",
         "@vue/babel-preset-jsx": "^1.1.2",
         "apexcharts": "^3.11.0",
@@ -73,7 +76,6 @@
         "lodash.merge": "^4.6.2",
         "mini-css-extract-plugin": "^0.8.0",
         "moment": "^2.24.0",
-        "multispinner": "^0.2.1",
         "node-sass": "^4.13.0",
         "npm": "^6.13.4",
         "url-loader": "^3.0.0",
